--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
             color: #666;
             margin-top: 5px;
         }
+        html, body {
+            height: 100%;
+            overflow-y: hidden; /* Prevent vertical scrolling */
+        }
+
+        .container {
+            max-width: 550px;
+            margin: 0 auto;
+            background: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            max-height: calc(100vh - 40px); /* Account for body padding */
+            overflow-y: auto; /* Allow scrolling within container if needed */
+        }        
     </style>
 </head>
 <body>
